<!--
  ~ Copyright (c) 2023. Wesley T. Benica
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Infinite Longbox</string>
    <string name="add_issue">Add Issue</string>
    <string name="delete_issue">Delete Issue</string>
    <string name="description_issue_cover">Issue Cover (not set)</string>
    <string name="description_issue_cover_set">Issue cover</string>
    <string name="hint_publisher">Publisher</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="label_release_date">Release Date</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_suffix">Suffix</string>
    <string name="hint_new_creator">New Creator</string>
    <string-array name="suffixes_array">
        <item>None</item>
        <item>Sr.</item>
        <item>Jr.</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_volume">Volume</string>
    <string name="search">Add Filter</string>
    <string name="grand_comic_database_tm">Grand Comic Database\u2122</string>
    <string name="goto_start">First</string>
    <string name="goto_skip_back">-10</string>
    <string name="goto_one_back">-1</string>
    <string name="goto_one_forward">+1</string>
    <string name="goto_skip_forward">+10</string>
    <string name="goto_end">Last</string>
    <string name="synopsis">Synopsis</string>
    <string name="story_dropdown_button">Expand story information table</string>
    <string name="characters">Characters</string>
    <!-- Strings used for fragments for navigation -->

    <string name="sort_image_content_description">Label for sort by picker box</string>
    <string name="search_image_content_description">Label for search bar</string>
    <string name="tag_filter_fragment">filter_fragment</string>
    <string name="sort_type_series_name">Series Name</string>
    <string name="sort_type_start_date">Start Date</string>
    <string name="column_sort_name">sortName</string>
    <string name="column_start_date">startDate</string>
    <string name="sort_type_issue_number">Issue Number</string>
    <string name="column_issue_num">issueNum</string>
    <string name="sort_type_release_date">Release Date</string>
    <string name="column_release_date">releaseDate</string>
    <string name="content_description_add_filter_button">Open search bar to add a new
        filter</string>
    <string name="filter_type_character">Character</string>
    <string name="description_series_list_item_background_image">Background image of series\' first issue cover</string>
    <string name="dummy_text">Doom Patrol</string>
    <string name="filter_type_creator">Creator</string>
    <string name="filter_type_series">Series</string>
    <string name="filter_type_publisher">Publisher</string>
    <string name="filter_type_all">All</string>
    <string name="label_variants">Variants</string>
    <string name="bottom_sheet_handle_description">Expand filter/sort options</string>
    <string name="content_desc_issue_display_gcd_link">Link to issue at Grand Comic Database</string>

    <!--     Fragment Series Detail-->
    <string name="series_detail_notes">Notes</string>
    <string name="series_detail_tracking_notes">Tracking notes</string>
    <string name="label_cover_date">Cover Date</string>
    <string name="label_notes">Notes</string>
    <string name="url_creative_commons_3_0">http://creativecommons.org/licenses/by/3.0/</string>
    <string name="url_creative_commons_3_0_img">https://i.creativecommons.org/l/by/3.0/88x31.png</string>
    <string name="text_gcd_cc_credit">Data courtesy of the
        <a href="https://www.comics.org">Grand Comics Database\u2122</a> under the
        <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
            Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)</a>.</string>
    <string name="text_gcd_cc_changes">The original database has been adapted to only include a
        subset of its records and fields. Additionally, some creator credits and character
        appearances have been converted from text fields to database records.</string>
    <string name="gcd_thanks">This app wouldn\'t be possible without the efforts of the
        volunteers of the Grand Comics Database\u2122 Project. If you want to help out, you can\n
            <a href="https://www.comics.org/accounts/register/">Register an account</a>\n
            <a href="http://docs.comics.org/wiki/How_To_Contribute_FAQ">Help index</a>\n
            <a href="https://www.comics.org/donate/">Donate to the GCD</a>
        </string>
</resources>