<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/issue_cover"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_issue_cover"
        android:elevation="1dp"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:scaleType="fitXY"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/label_release_date"
        style="@style/RoleNameText"
        android:layout_marginTop="@dimen/margin_narrow"
        android:layout_marginStart="@dimen/margin_narrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/release_date_text_view"
        android:text="@string/release_date"
        android:padding="@dimen/margin_narrow"
        android:background="@color/tag_publisher"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/issue_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_date_text_view"
        style="@style/CreatorNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_narrow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/label_release_date"
        app:layout_constraintStart_toEndOf="@+id/label_release_date"
        app:layout_constraintTop_toTopOf="@id/label_release_date"
        tools:text="May 6, 2021" />

    <Button
        android:id="@+id/collectionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_to_collection"
        app:layout_constraintBottom_toBottomOf="@+id/issue_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/issue_cover" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/variant_spinner_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/issue_cover">

        <View
            android:id="@+id/variant_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_narrow"
            android:background="?attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_variants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:fontFamily="@font/archivo_black"
            android:labelFor="@id/variant_spinner"
            android:padding="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_variants" />

        <Spinner
            android:id="@+id/variant_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="1dp"
            tools:listitem="@layout/list_item_variant"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/variant_divider"
            app:layout_constraintStart_toEndOf="@id/label_variants"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <include-->
<!--        layout="@layout/story_box"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/divider2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/variant_spinner_holder" />-->

    <ScrollView
        android:id="@+id/issue_credits_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="true"
        android:elevation="-1dp"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bottom_stuff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variant_spinner_holder">

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_stuff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:id="@+id/navbar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/gcd_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/goto_start_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_start"
            app:iconTint="#000" />

        <Button
            android:id="@+id/goto_skip_back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_skip_back" />

        <Button
            android:id="@+id/goto_previous_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_one_back" />

        <Button
            android:id="@+id/goto_next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_one_forward" />

        <Button
            android:id="@+id/goto_skip_forward_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_skip_forward" />

        <Button
            android:id="@+id/goto_end_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goto_end" />

    </LinearLayout>

    <Button
        android:id="@+id/gcd_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/toggle_edit_button"
        android:gravity="bottom|clip_horizontal|end"
        android:text="@string/grand_comic_database_tm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>